# gmbas

./: README.md  go.mod  main.go  test.go
adapt_sign/: Cargo.toml
adapt_sign/src/: main.rs
adaptor/: adaptor.go  extract.go  init.go  pre_sign.go  pre_verify.go
normal/: init.go  sign.go  verify.go
